--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ htmlcov/
 # Migrations (optional: don't ignore if you want them in version control)
 **/migrations/*.py
 !**/migrations/__init__.py
+
+# venv file
+venv/
